--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div align="center" class=" row shadow rounded bg-warning p-4 mt-2" style="--bs-bg-opacity: .5;">
-            <h2>My CRUD Project</h2>
+            <h2>My First CRUD Project</h2>
         </div>
         <div class="row mt-4" style="--bs-bg-opacity: .5;">
             <div class="col-5 me-2 shadow-lg rounded">
@@ -82,17 +82,6 @@
 
          
     </div>
-
-
-
-
-
-
-
-
-
-
-
 
    <script src="js/ajax.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
