--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div align="center" class=" row shadow rounded bg-warning p-4 mt-2" style="--bs-bg-opacity: .5;">
-            <h2>My First CRUD Project</h2>
+            <h2>My First CRUD Project using javascrit</h2>
         </div>
         <div class="row mt-4" style="--bs-bg-opacity: .5;">
             <div class="col-5 me-2 shadow-lg rounded">
